--- a/index.html
+++ b/index.html
@@ -123,6 +123,24 @@ font-family: 'Open Sans', sans-serif;
 
             
           </section>
+          <section class="my-24 flex px-16 py-24 flex-col lg:flex-row gap-12 rounded-xl h-19 bg-gradient-to-r from-[#FF8938] to-[#F00]">
+            <div class="space-y-5">
+              <h2 class="text-5xl font-extrabold text-white">Meet Our Super Clients
+              </h2>
+              <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+              <button class="btn btn-primary">Show All</button>
+
+            </div>
+            <div>
+              <div class="relative p-10 rounded-lg bg-white  ">
+                <img class="absolute -left-7 -top-5" src="./images/client.png">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="font-extrabold mt-5">Ilham Yuda</h4>
+                <p class="font-medium mt-2">Businessman </p>
+              </div>
+            </div>
+
+          </section>
     </main>
     <footer>
 
